--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -79,9 +79,20 @@ For this guide, we use a [**vectorizer**](/admin-api#textvectorizer-configuratio
 
 <Tabs items={['Dashboard', 'SDK']}>
   <Tabs.Tab>
-  You’ll find these options in the [**Project Configuration**](/project-configurations/vectorizers) section during project setup.
+  You’ll find these options in the [**Project Configuration**](/project-configurations/vectorizers) -> `ADVANCED` section during project setup.
 
-  ![project settings](/images/docs/get-started/project-settings.jpg)
+  - Configure `Text Vectorizers` to enable semantic search and text processing
+   ![Setting up text vectorizer](/images/docs/get-started/setup-text-vectorizer.png)
+    
+  - Set up `Generative Search` with your preferred model
+  ![Setting up generative search](/images/docs/get-started/setup-generative-search.png)
+  
+  - Enable `AutoVision` for enhancing Image
+  ![Enable Autovision for enhancing Image](/images/docs/get-started/visual-enhancer.png)
+
+  - Enable `AutoSummary` to automatically generate text summaries
+  ![Setting up AutoSummary for Text](/images/docs/get-started/setup-autosummary.png)
+
   </Tabs.Tab>
 
  <Tabs.Tab>
@@ -136,7 +147,7 @@ Data sources define where your project gets its data. Unbody supports both [preb
                 ### Entrypoint
                  ![Select an entrypoint](/images/docs/get-started/entry.jpg)
 
-                ### Init
+                ### Initialize
                  ![Initialize](/images/docs/get-started/init.jpg)
 
             </Steps>
@@ -151,13 +162,20 @@ Data sources define where your project gets its data. Unbody supports both [preb
   </Tabs.Tab>
 </Tabs>
 
-At this point, unbody will ingest, process, vectorize, and enrich the data automatically. This process will take while, you can keep track of progress in the data source page under logs section.
+{/* At this point, unbody will ingest, process, vectorize, and enrich the data automatically. This process will take while, you can keep track of progress in the data source page under logs section.
 
-At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typescript)](/graphql-api/authorization) and [Graphql](/graphql-api/authorization). Each project has a graphql playground where you can play around with the given queries.
+At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typescript)](/graphql-api/authorization) and [Graphql](/graphql-api/authorization). Each project has a graphql playground where you can play around with the given queries. */}
+
+At this point, Unbody will ingest, process, vectorize, and enrich the data automatically. This process will take a while, and you can monitor the progress in the logs section:
+![Processing status in logs](/images/docs/get-started/logs.png)
+{/* *Track initialization progress and processing status* */}
+
+At this point you have nothing to do on dashboard and can move to next step which is about start building. The following will be provided in [SDK (typeScript)](/graphql-api/authorization) and Graphql. Each project has a graphql playground where you can play around with the given queries. 
+![GraphQL playground interface](/images/docs/get-started/graphql-playground.png)
+{/* *Built-in GraphQL playground for testing queries* */}
 
 ## Step 4: Interact with Your Data
-
-Once your data is ready, use the [**Content API**](/graphql-api/authorization) to perform tasks like semantic search or content generation.
+Once your data is ready, use the [**Content API**](/graphql-api/authorization) to perform tasks like semantic search or content generation. 
 
 **Fetch [google docs](/graphql-api/data-types/googledoc)**
 
