--- a/pages/content-api/authentication.mdx
+++ b/pages/content-api/authentication.mdx
@@ -1,6 +1,6 @@
 import { Tabs, Callout } from "nextra/components";
 
-# Authorization
+# Authentication
 
 Unbody makes it easy for you to handle your content through APIs but we also care for your security. Therefore, to securely interact with Unbody's GraphQL API, you need to include your project ID and API key in the request headers.
 
@@ -50,16 +50,18 @@ fetch('<https://graphql.unbody.io>', {
 // Axios
 const axios = require('axios');
 
-axios.post('https://graphql.unbody.io', {
-query: "{ Your GraphQL query here }"
-}, {
-headers: {
-'Authorization': 'Bearer <API_KEY>',
-'X-Project-Id': '<PROJECT_ID>',
-'Content-Type': 'application/json'
-}
-})
-.then(...)
+axios.post('https://graphql.unbody.io',
+    {
+        query: "{ Your GraphQL query here }"
+    },
+    {
+        headers: {
+            'Authorization': 'Bearer <API_KEY>',
+            'X-Project-Id': '<PROJECT_ID>',
+            'Content-Type': 'application/json'
+        }
+    })
+    .then(...)
 
 ```
 </Tabs.Tab>
