--- a/pages/generative-and-rag/basic-using-generative-search.mdx
+++ b/pages/generative-and-rag/basic-using-generative-search.mdx
@@ -11,11 +11,11 @@ Transform a single document into an AI-generated response by providing a prompt 
   <Tabs.Tab>
     ```typescript
     const data = await unbody.get.textDocument
-      .where({ mimeType: "application/pdf" })
-      .generate
-      .fromOne("Summarize this: {text}")
-      .select("title", "originalName")
-      .exec();
+        .where({ mimeType: "application/pdf" })
+        .generate
+        .fromOne("Summarize this: {text}")
+        .select("title", "originalName")
+        .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -80,17 +80,108 @@ Transform a single document into an AI-generated response by providing a prompt 
 ]
 ```
 
-## Generate from multiple documents
-Create a unified AI-generated response from multiple documents by specifying which properties to include in the generation process, perfect for creating summaries or analyses across a collection of documents.
+## Generate from single document with options
+Generate content from a single document with additional configuration options like model selection and generation parameters.
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const data = await unbody.get.textDocument
-      .generate
-      .fromMany("Create a 100 words summary:", ["text", "title"])
-      .select("title", "originalName")
-      .exec();
+        .where({ mimeType: "text/markdown" })
+        .generate.fromOne({
+            prompt: "Create a short report for these: {text}",
+            options: {
+                model: "gpt-4",
+                topP: 0.7,
+                maxTokens: 1000,
+                temperature: 0.7,
+                presencePenalty: 0,
+                frequencyPenalty: 0,
+            },
+        })
+        .select("originalName")
+        .exec();
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```graphql
+    {
+      Get {
+        TextDocument(
+          where: {
+            operator: Equal, 
+            path: "mimeType", 
+            valueText: "text/markdown"
+          }
+        ) {
+          _additional {
+            generate(
+              singleResult: {
+                prompt: "Create a short report for these: {text}", 
+                options: {
+                  model: "gpt-4", 
+                  topP: 0.7, 
+                  maxTokens: 1000, 
+                  temperature: 0.7, 
+                  presencePenalty: 0, 
+                  frequencyPenalty: 0
+                }
+              }
+            ) {
+              error
+              singleResult
+              metadata {
+                finishReason
+                usage {
+                  inputTokens
+                  outputTokens
+                  totalTokens
+                }
+              }
+            }
+          }
+          originalName
+        }
+      }
+    }
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+```typescript
+// Response
+[
+    {
+        "_additional": {
+            "generate": {
+                "error": null,
+                "metadata": {
+                    "finishReason": "stop",
+                    "usage": {
+                        "inputTokens": 1668,
+                        "outputTokens": 287,
+                        "totalTokens": 1955
+                    }
+                },
+                "singleResult": "Report:\n\nUnbody's official client for Typescript/Javascript is a powerful tool..."
+            }
+        },
+        "originalName": "typescript-client.md"
+    }
+]
+```
+
+## Generate from multiple documents
+Create a unified AI-generated response from multiple documents by specifying which properties to include in the generation process.
+
+<Tabs items={['Unbody SDK', 'GraphQL']}>
+  <Tabs.Tab>
+    ```typescript
+    const data = await unbody.get.textDocument
+        .generate
+        .fromMany("Create a 100 words summary:", ["text", "title"])
+        .select("title", "originalName")
+        .exec();
     ```
   </Tabs.Tab>
   <Tabs.Tab>
@@ -133,7 +224,7 @@ Create a unified AI-generated response from multiple documents by specifying whi
     "_additional": {
       "generate": {
         "error": null,
-        "groupedResult": "Here is a summary of the provided text:\n\nThe text includes a variety of topics, ranging from discussions on electric vehicles and their impact on urban environments to an exploration of machine learning and deep learning techniques...",
+        "groupedResult": "Here is a summary of the provided text:\n\nThe text includes a variety of topics...",
         "metadata": {
           "finishReason": "",
           "usage": {
@@ -147,6 +238,101 @@ Create a unified AI-generated response from multiple documents by specifying whi
     "originalName": "Overcoming Challenges in the Adoption of Electric Vehicles_ A Roadmap for Urban Transformation.docx",
     "title": "Overcoming Challenges in the Adoption of Electric Vehicles: A Roadmap for Urban Transformation"
   }
+]
+```
+
+## Generate from multiple documents with options
+Generate content from multiple documents with additional configuration options for more control over the generation process.
+
+<Tabs items={['Unbody SDK', 'GraphQL']}>
+  <Tabs.Tab>
+    ```typescript
+    const data = await unbody.get.textDocument
+        .where({ mimeType: "text/markdown" })
+        .generate.fromMany({
+            task: "Write a short report based on these topics:",
+            properties: ["title", "text", "tags"],
+            options: {
+                model: "gpt-4",
+                topP: 0.7,
+                maxTokens: 1000,
+                temperature: 0.7,
+                presencePenalty: 0,
+                frequencyPenalty: 0,
+            },
+        })
+        .select("originalName", "title")
+        .exec();
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```graphql
+    {
+      Get {
+        TextDocument(
+          where: {
+            operator: Equal, 
+            path: "mimeType", 
+            valueText: "text/markdown"
+          }
+        ) {
+          _additional {
+            generate(
+              groupedResult: {
+                task: "Write a short report based on these topics:", 
+                properties: ["title", "text", "tags"], 
+                options: {
+                  model: "gpt-4", 
+                  topP: 0.7, 
+                  maxTokens: 1000, 
+                  temperature: 0.7, 
+                  presencePenalty: 0, 
+                  frequencyPenalty: 0
+                }
+              }
+            ) {
+              error
+              groupedResult
+              metadata {
+                finishReason
+                usage {
+                  inputTokens
+                  outputTokens
+                  totalTokens
+                }
+              }
+            }
+          }
+          originalName
+          title
+        }
+      }
+    }
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+```typescript
+// Response
+[
+    {
+        "_additional": {
+            "generate": {
+                "error": null,
+                "groupedResult": "The report provides information on two main topics...",
+                "metadata": {
+                    "finishReason": "stop",
+                    "usage": {
+                        "inputTokens": 5355,
+                        "outputTokens": 316,
+                        "totalTokens": 5671
+                    }
+                }
+            }
+        },
+        "originalName": "typescript-client.md",
+        "title": "Installation"
+    }
 ]
 ```
 
